<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4640EC"
        android:text="@string/btnIrCheck"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4640EC"
        android:text="@string/btnIrRadio"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4640EC"
        android:text="@string/btnIrListView"
        android:textStyle="bold" />

</LinearLayout>