<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RadioActivity">

    <TextView
        android:id="@+id/txtIdRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#4640EC"
        android:textSize="24dp"
        android:textStyle="bold"></TextView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdbtnMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrdbtnMujer"></RadioButton>

        <RadioButton
            android:id="@+id/rdbtnHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrdbtnHombre" ></RadioButton>

        <RadioButton
            android:id="@+id/rdbtnOtro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrdbtnOtro" ></RadioButton>
    </RadioGroup>

</LinearLayout>